# s3g-rnbo-clap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
docs/: mcs-gen-granular-adaptation.md  rnbo-clap-wrapper.md
max_patches/: README.md
rnbo_exports/: README.md
scripts/: audit-gui-style.sh  install-clap-bundles.sh  stage-dist.sh
src/: s3g_rnbo_fallback.h  s3g_rnbo_test_clap.cpp
tests/: smoke.cpp
